group hours form layout on smaller screens

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="columns">
-    <div class="column col-9">
+    <div class="column col-9 col-xl-12">
       <h2>Details</h2>
 
       <form id="user-details-form" action="/update-account-details" method="POST">
