--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -283,7 +283,7 @@
           <aside class="sidebar column col-2 col-lg-3 col-xl-3 hide-lg">
             {{{layoutParts.sidebar}}}
           </aside>
-          <main class="body column col-lg-auto">
+          <main class="body column col-xs-auto">
             {{{layoutParts.body}}}
           </main>
         </div>
