--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -1,25 +1,25 @@
 <div class="form-horizontal form">
   <div class="form-group">
-    <div class="column col-3">
+    <div class="column col-3 col-sm-12">
       <label class="form-label" for="first_name">First name</label>
     </div>
-    <div class="column col-9">
+    <div class="column col-9 col-sm-12">
       <input class="form-input" id="first_name" name="first_name" type="text" value="{{@root.data.accountInfo.first_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
     </div>
   </div>
   <div class="form-group">
-    <div class="column col-3">
+    <div class="column col-3 col-sm-12">
       <label class="form-label" for="last_name">Last name</label>
     </div>
-    <div class="column col-9">
+    <div class="column col-9 col-sm-12">
       <input class="form-input" id="last_name" name="last_name" type="text" value="{{@root.data.accountInfo.last_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
     </div>
   </div>
   <div class="form-group">
-    <div class="column col-3">
+    <div class="column col-3 col-sm-12">
       <label class="form-label" for="date_of_birth">Date of birth</label>
     </div>
-    <div class="column col-9">
+    <div class="column col-9 col-sm-12">
       {{#unless @root.data.accountInfo.date_of_birth ~}}
         <input class="form-input" id="date_of_birth" max="{{momentFormat (dateMath 'now-13y') 'YYYY-MM-DD'}}" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth}}>
       {{else}}
@@ -34,35 +34,35 @@
 
   {{#unless admin ~}}
     <div class="form-group" id="verification" style="display:none;">
-      <div class="column col-3">
+      <div class="column col-3 col-sm-12">
         <label class="form-label" for="verification_email">Your parent or guardian's email address</label>
       </div>
-      <div class="column col-9">
+      <div class="column col-9 col-sm-12">
         <input class="form-input" id="verification_email" name="verification_email" type="text" value="{{@root.data.accountInfo.verification_email}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
       </div>
     </div>
     <div class="form-group">
-      <div class="column col-3">
+      <div class="column col-3 col-sm-12">
         <label class="form-label" for="school_college_name">School/college name</label>
       </div>
-      <div class="column col-9">
+      <div class="column col-9 col-sm-12">
         <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
       </div>
     </div>
   {{else}}
     <div class="form-group">
-      <div class="column col-3">
+      <div class="column col-3 col-sm-12">
         <label class="form-label" for="title">Job title</label>
       </div>
-      <div class="column col-9">
+      <div class="column col-9 col-sm-12">
         <input class="form-input" id="title" name="title" type="text" value="{{@root.data.accountInfo.title}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
       </div>
     </div>
     <div class="form-group">
-      <div class="column col-3">
+      <div class="column col-3 col-sm-12">
         <label class="form-label" for="phone">Phone number</label>
       </div>
-      <div class="column col-9">
+      <div class="column col-9 col-sm-12">
         <input class="form-input" id="phone" name="phone" type="text" value="{{@root.data.accountInfo.phone}}" placeholder="" autocomplete="false" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
       </div>
     </div>
@@ -71,7 +71,7 @@
   {{/unless ~}}
   <input type="hidden" name="email" value="{{@root.data.auth.email}}">
   <div class="form-group">
-    <div class="column col-3">
+    <div class="column col-3 col-sm-12">
       <label class="form-label" for="postcode">{{#if admin}}Work postcode{{else}}Home postcode{{/if}}</label>
     </div>
     <div class="column col-2">
