--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -225,6 +225,7 @@
               </li>
               {{#if @root.data.auth ~}}
                 {{#each @root.context.metaData.menus.main-signed-in ~}}
+                {{#if (contains user-types @root.data.accountInfo.user_type) ~}}
                   <li class="menu-item">
                     <a href="{{stripTrailingSlash path}}" class="l-padding-full {{#if (regexMatch @root.request.url.pathname route 'gi')}}active{{/if}}">
                       {{#if icon ~}}
@@ -233,8 +234,10 @@
                       {{label}}
                     </a>
                   </li>
+                {{/if ~}}
                 {{/each ~}}
                 {{#each @root.context.metaData.menus.user-signed-in ~}}
+                {{#if (contains user-types @root.data.accountInfo.user_type) ~}}
                   <li class="menu-item">
                     <a href="{{stripTrailingSlash path}}" class="l-padding-full {{#if (regexMatch @root.request.url.pathname route 'gi')}}active{{/if}}">
                       {{#if icon ~}}
@@ -243,6 +246,7 @@
                       {{label}}
                     </a>
                   </li>
+                {{/if ~}}
                 {{/each ~}}
                 <li class="menu-item">
                   <a href="/sign-out" class="l-padding-full" data-component="TasksTrigger" data-TasksTrigger="sign-out">
