--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -8,7 +8,7 @@
 
         {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
         <div class="columns h-padding">
-          <div class="column col-3"></div>
+          <div class="column col-3 hide-sm"></div>
           <div class="column col-2">
             <button id="detail-submit" class="btn btn-primary b-margin-full">
               Save details
@@ -22,7 +22,7 @@
       <h2>Settings</h2>
 
       <div class="columns">
-        <div class="column col-6 form b-padding-full" id="change-password">
+        <div class="column col-6 col-sm-12 form b-padding-full" id="change-password">
           {{#if (contains (map @root.data.auth.providerData (getProp "providerId")) "password") ~}}
             <h3>Change password</h3>
           {{else}}
@@ -61,7 +61,7 @@
         </div>
 
         {{#unless @root.data.isAdmin ~}}
-        <div class="column col-6 b-padding-full form" id="change-email">
+        <div class="column col-6 col-sm-12 b-padding-full form" id="change-email">
           <h3>Change email</h3>
 
           <div id="change-email-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
@@ -89,7 +89,7 @@
 
       <div class="columns">
         {{#unless @root.data.isAdmin ~}}
-        <div class="column col-6 form b-padding-full" id="link-unlink">
+        <div class="column col-6 col-sm-12 form b-padding-full" id="link-unlink">
           {{#ifAny (contains (map @root.data.auth.providerData (getProp "providerId")) "google.com") (contains (map @root.data.auth.providerData (getProp "providerId")) "twitter.com") (contains (map @root.data.auth.providerData (getProp "providerId")) "facebook.com") ~}}
           <h3>Linked accounts</h3>
 
@@ -157,7 +157,7 @@
         {{/unless ~}}
 
         {{#unless @root.data.isAdmin ~}}
-        <div class="column col-6 form b-padding-full">
+        <div class="column col-6 col-sm-12 form b-padding-full">
           <h3>Account data</h3>
 
           <div id="delete-account-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
