--- a/configuration/templates/account/auth/sign-in.hbs
+++ b/configuration/templates/account/auth/sign-in.hbs
@@ -1,7 +1,4 @@
 <div id="sign-in-form" class="container form authentication-form">
-  <!-- <h2 class="x-padding">
-    Welcome back! Please sign in
-  </h2> -->
   <div class="l-margin r-margin">
     <div class="bg-error s-rounded x-padding v-margin" id="sign-in-message">
       <span id="form-message"></span>
@@ -43,53 +40,4 @@
   </div>
 </form>
 
-<script type="javascript/blocked" data-component-config="sign-in">
-  {
-    click: {
-      preventDefault: true,
-      tasks: [
-        {
-          type: "elementManipulator",
-          config: {
-            "#sign-in-form": { addClass: "disabled" }
-          }
-        },
-        {
-          name: "signIn",
-          type: "firebaseSignIn",
-          config: {
-            email: { __template: '\{{jquery "#sign-in-email" "val"}}' },
-            password: { __template: '\{{jquery "#sign-in-password" "val"}}' },
-            providerId: { __template: '\{{jquery rootElement "attr" (split "data-provider-id")}}' }
-          }
-        },
-        {
-          type: "switch",
-          config: {
-            which: { __template: "\{{#if errors.signIn}}error\{{/if}}" },
-            branches: {
-              default: {},
-              error: {
-                halt: true,
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      "#sign-in-form": { removeClass: "disabled" },
-                      "#sign-in-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\{{errors.signIn.message}}" } }
-                    }
-                  }
-                ]
-              }
-            }
-          }
-        },
-        {
-          type: "run",
-          config: { code: "window.location.href = '/'" }
-        }
-      ]
-    }
-  }
-</script>
+{{> account_task_sign_in}}
