--- a/configuration/templates/account/auth/sign-up-admin-details.hbs
+++ b/configuration/templates/account/auth/sign-up-admin-details.hbs
@@ -14,8 +14,8 @@
 
     <input type="hidden" name="signup" value="true">
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
-    <div class="columns">
-      <div class="column col-3"></div>
+    <div class="columns h-padding">
+      <div class="column col-3 hide-sm"></div>
       <div class="column col-2">
         <button id="detail-submit" class="btn btn-primary b-margin-full" type="submit">
           Submit details
