--- a/configuration/templates/account/auth/approval-required.hbs
+++ b/configuration/templates/account/auth/approval-required.hbs
@@ -1,6 +1,6 @@
 <div class="empty">
   <div class="empty-icon">
-    <span class="fal fa-user-check fa-3x"></span>
+    <span class="fal fa-users-cog fa-3x"></span>
   </div>
   <p class="empty-title h5">
     {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
@@ -26,31 +26,34 @@
     {{/if ~}}
     {{/compare ~}}
   </p>
-  <div class="empty-action">
-    <a href="approval-email-send" class="btn btn-primary">Resend email</a>
+  <div id="primary-actions" class="empty-action">
+    <a href="/approval-email-send" class="btn btn-primary">Resend email</a>
     {{#compare @root.data.accountInfo.user_type "Volunteer" ~}}
-    <button onclick="revealForm()" class="btn btn-primary">Change email address</button>
+    <button onclick="revealForm()" class="btn">Change email address</button>
     {{/compare ~}}
-    <form id="user-details-form" style="display:none;" method="POST" action="submit-sign-up-details">
-      Please enter the new email address below
+  </div>
+  <div class="empty-action">
+    <form id="user-details-form" style="display:none;" method="POST" action="/submit-sign-up-details">
+      {{!-- Please enter the new email address below --}}
       <input type="hidden" name="signup" value="true">
       {{#each (getKeys @root.data.accountInfo) ~}}
-        {{#compare this "verification_email" ~}}
-        {{else}}
-        <input type="hidden" name="{{this}}" value="{{getProperty @root.data.accountInfo this}}">
-      {{/compare ~}}
+      {{#unless (compare this "verification_email") ~}}
+      <input type="hidden" name="{{this}}" value="{{getProperty @root.data.accountInfo this}}">
+      {{/unless ~}}
       {{/each ~}}
       <div id="approval" class="columns">
-        <div class="column col-6">
+        <div class="column col-6 col-mx-auto">
           <div class="form-group">
-            <label for="verification_email" class="form-label">
-              Your parent or guardian's email address
-            </label>
-            <input type="email" id="verification_email" name="verification_email" class="form-input" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+            {{!-- <label for="verification_email" class="form-label">
+              <strong>Your parent or guardian's email address</strong>
+            </label> --}}
+            <div class="input-group">
+              <input type="email" id="verification_email" name="verification_email" class="form-input" value="{{@root.data.accountInfo.verification_email}}" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+              <button type="submit" class="btn btn-primary input-group-btn">Update and resend</button>
+            </div>
           </div>
         </div>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
 </div>
@@ -59,5 +62,7 @@
   function revealForm(){
     var x = document.getElementById("user-details-form");
     x.style.display = "block";
+    var y = document.getElementById("primary-actions");
+    y.style.display = "none";
   }
 </script>
