final tweaks for security

--- a/configuration/templates/account/account.hbs
+++ b/configuration/templates/account/account.hbs
@@ -152,7 +152,7 @@
               Link to Facebook
             </button>
           {{/unless ~}}
-          {{/unless ~}}
+          {{/unless ~}}authRequired
         </div>
         {{/unless ~}}
 
