--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -14,7 +14,7 @@
       {{{json key='last_name' value=last_name}}},
       {{{json key='postcode' value=postcode}}},
       {{{json key='external_id' value=external_id}}},
-      {{{json key='date_of_birth' value=@root.accountInfo.date_of_birth}}}, {{!-- Can't update DOB after first submit --}}
+      {{{json key='date_of_birth' value=@root.data.accountInfo.date_of_birth}}}, {{!-- Can't update DOB after first submit --}}
       {{{json key='school_college_name' value=school_college_name}}},
       {{{json key='phone' value=phone}}},
       {{{json key='title' value=title}}},
