--- a/configuration/templates/opportunity/map.hbs
+++ b/configuration/templates/opportunity/map.hbs
@@ -22,11 +22,70 @@
   </div>
   {{#if @root.data.search_data.map_results.pagination.totalResults ~}}
   {{!--#ifAny (compare @root.data.search_data.map_results.aggregations.geo_search.buckets.[0].doc_count ">" 0) (compare @root.request.params.query.location "===" "") ~--}}
-  <div class="card-loader" id="opportunity-map-loader" style="display: flex">
-    <div class="card-loader-inner">
-      <span class="far fa-2x fa-spinner-third fa-spin"></span>
-    </div>
-  </div>
+
+  <div id="map-full" style="height: 60vh; width: 100%;" data-component="LeafletMap" data-LeafletMap='{
+      mapOptions: {
+        fullscreenControl: true,
+        scrollWheelZoom: false,
+        trackResize: false,
+        zoom: 11
+      },
+      initialLatLng: { lat: 55.94528820000001, lng: -3.200755699999945 },
+      featureGroups: [
+        {{#ifAll @root.request.params.query.distance @root.request.params.query.lat @root.request.params.query.lng ~}}
+        {
+          boundToThis: true,
+          features: [
+            {
+              type: "Circle",
+              latLng: { lat: {{@root.request.params.query.lat}}, lng: {{@root.request.params.query.lng}} },
+              options: {
+                radius: {{default (multiply @root.request.params.query.distance 1609.34) 0}},
+                color: "#009DDA"
+              }
+            }
+          ]
+        }
+        {{/ifAll ~}}
+      ],
+      markerClusterGroups: [
+        {
+          boundToThis: true,
+          options: {
+            showCoverageOnHover: false
+          },
+          markers: [
+            {{#each @root.data.search_data.map_results.hits.hits ~}}
+              {{#if _source.geo_coords ~}}
+                {{#each (arrayify _source.geo_coords) ~}}
+                  {{#if @root.request.params.query.distance ~}}
+                    {{#compare (itemAt ../fields.distance @index) "<" @root.request.params.query.distance ~}}
+                      {
+                        type: "Marker",
+                        popupContent: `
+                          {{> opportunity_map ../_source map_postcode=(itemAt (arrayify (split ../_source.postcode ",")) @index)}}
+                        `,
+                        latLng: { lat: {{lat}}, lng: {{lon}} }
+                      },
+                    {{/compare ~}}
+                  {{else}}
+                    {
+                      type: "Marker",
+                      popupContent: `
+                        {{> opportunity_map ../_source map_postcode=(itemAt (arrayify (split ../_source.postcode ",")) @index)}}
+                      `,
+                      latLng: { lat: {{lat}}, lng: {{lon}} }
+                    },
+                  {{/if ~}}
+                {{/each ~}}
+              {{/if ~}}
+            {{/each ~}}
+          ]
+        }
+      ]
+    }'></div>
+
+  {{!--
   <div id="map-full" data-map-name="fullMap" class="grid-content" data-map-clustered-options='{
   {{#ifAll @root.request.params.query.distance @root.request.params.query.lat @root.request.params.query.lng ~}}
   "circle": {
@@ -56,6 +115,7 @@
       {{/if ~}}
     {{/each ~}}
   </div>
+  --}}
   {{!-- else}}
   <div class="grid-content">
     <div class="search-info">
@@ -69,10 +129,3 @@
   </div>
   {{/if ~}}
 </div>
-
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    var $loader = $('#opportunity-map-loader');
-    $loader.css('display', 'none');
-  });
-</script>
